--- a/index2.html
+++ b/index2.html
@@ -9,35 +9,38 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
+      background: #222;
       color: #fff;
       font-family: Arial, sans-serif;
-      background: #222; /* cor sólida para fora da faixa */
       text-align: center;
     }
     .faixa-central {
       background: url('fundoapp1.jpg') no-repeat center center;
       background-size: cover;
+      width: 92vw;
       max-width: 600px;
-      min-height: 100vh;
-      margin: 0 auto;
+      min-height: 96vh;
+      margin: 2vh auto;
       display: flex;
       flex-direction: column;
       align-items: stretch;
       justify-content: flex-start;
-      border-radius: 20px;
-      box-shadow: 0 4px 30px #000a, 0 1.5px 12px #0006;
-      /* Sombra aprimorada para desktop */
+      border-radius: 24px;
+      box-shadow: 0 0 32px 8px rgba(0,0,0,0.50), 0 10px 56px 10px rgba(0,0,0,0.25);
       overflow: hidden;
-      transition: border-radius 0.3s, box-shadow 0.3s;
+      transition: border-radius 0.3s, box-shadow 0.3s, width 0.3s;
     }
     @media (max-width: 650px) {
       .faixa-central {
+        width: 100vw;
         max-width: 100vw;
+        min-height: 100vh;
+        margin: 0;
         border-radius: 0;
         box-shadow: none;
       }
     }
-
+    /* resto do seu CSS ... */
     .container {
       margin: 20px auto;
       padding: 40px 20px;
@@ -185,7 +188,6 @@
       color: #fff;
       text-shadow: 0 1px 4px #0009;
     }
-    /* Carousel styles */
     .carousel-wrapper {
       width: 100vw;
       max-width: 600px;
@@ -237,7 +239,10 @@
     }
     @media (max-width: 600px) {
       .faixa-central, .carousel-wrapper {
+        width: 100vw;
         max-width: 100vw;
+        min-height: 100vh;
+        margin: 0;
         border-radius: 0 !important;
         box-shadow: none !important;
       }
