--- a/index2.html
+++ b/index2.html
@@ -9,45 +9,18 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: #222;
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-    }
-    .faixa-central {
-      background: url('fundoapp1.jpg') no-repeat center center;
+      background: url('fundoapp1.jpg') no-repeat center center fixed;
       background-size: cover;
-      width: 92vw;
-      max-width: 600px;
-      min-height: 96vh;
-      margin: 2vh auto;
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      justify-content: flex-start;
-      border-radius: 24px;
-      box-shadow: 0 0 32px 8px rgba(0,0,0,0.50), 0 10px 56px 10px rgba(0,0,0,0.25);
-      overflow: hidden;
-      transition: border-radius 0.3s, box-shadow 0.3s, width 0.3s;
     }
-    @media (max-width: 650px) {
-      .faixa-central {
-        width: 100vw;
-        max-width: 100vw;
-        min-height: 100vh;
-        margin: 0;
-        border-radius: 0;
-        box-shadow: none;
-      }
-    }
-    /* resto do seu CSS ... */
     .container {
-      margin: 20px auto;
+      margin: 0 auto;
       padding: 40px 20px;
-      border-radius: 10px;
-      max-width: 400px;
-      box-shadow: 0 2px 8px #0008;
-      background: transparent;
+      max-width: 600px;
+      background: rgba(0,0,0,0.45);
+      border-radius: 20px;
     }
     .logo {
       width: 130px;
@@ -237,14 +210,12 @@
       opacity: 1;
       border-color: #007aff;
     }
-    @media (max-width: 600px) {
-      .faixa-central, .carousel-wrapper {
-        width: 100vw;
+    @media (max-width: 700px) {
+      .container, .carousel-wrapper {
         max-width: 100vw;
-        min-height: 100vh;
-        margin: 0;
         border-radius: 0 !important;
         box-shadow: none !important;
+        background: rgba(0,0,0,0.5);
       }
     }
     @media (max-width: 590px) {
@@ -258,55 +229,53 @@
   </style>
 </head>
 <body>
-  <div class="faixa-central">
-    <main class="container">
-      <img class="logo" src="logo.png" alt="Logo da empresa Grupo Corcelli">
-      <h1>Grupo Corcelli</h1>
-      <div class="redes-title">Acesse nossas redes sociais</div>
-      <div class="destaque-row">
-        <a class="destaque-link salvar" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
-          <img class="icon-img" src="contato.svg" alt="Salvar contato">
-          <span class="destaque-label">Salvar contato</span>
-        </a>
-        <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar para Grupo Corcelli">
-          <img class="icon-img" src="call.svg" alt="Telefone">
-          <span class="destaque-label">Ligar</span>
-        </a>
-      </div>
-      <div class="icon-grid">
-        <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
-          <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
-          <span class="icon-label">WhatsApp</span>
-        </a>
-        <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
-          <img class="icon-img" src="facebook.svg" alt="Facebook">
-          <span class="icon-label">Facebook</span>
-        </a>
-        <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
-          <img class="icon-img" src="instagram.svg" alt="Instagram">
-          <span class="icon-label">Instagram</span>
-        </a>
-        <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
-          <img class="icon-img" src="tiktok.svg" alt="TikTok">
-          <span class="icon-label">TikTok</span>
-        </a>
-        <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
-          <img class="icon-img" src="logo.png" alt="Site">
-          <span class="icon-label">Site</span>
-        </a>
-        <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
-          <img class="icon-img" src="email.svg" alt="E-mail">
-          <span class="icon-label">E-mail</span>
-        </a>
-      </div>
-      <footer>
-        &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
-      </footer>
-    </main>
-    <div class="carousel-wrapper">
-      <div class="carousel" id="carousel"></div>
-      <div class="carousel-dots" id="carousel-dots"></div>
+  <main class="container">
+    <img class="logo" src="logo.png" alt="Logo da empresa Grupo Corcelli">
+    <h1>Grupo Corcelli</h1>
+    <div class="redes-title">Acesse nossas redes sociais</div>
+    <div class="destaque-row">
+      <a class="destaque-link salvar" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+        <img class="icon-img" src="contato.svg" alt="Salvar contato">
+        <span class="destaque-label">Salvar contato</span>
+      </a>
+      <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar para Grupo Corcelli">
+        <img class="icon-img" src="call.svg" alt="Telefone">
+        <span class="destaque-label">Ligar</span>
+      </a>
     </div>
+    <div class="icon-grid">
+      <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
+        <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
+        <span class="icon-label">WhatsApp</span>
+      </a>
+      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
+        <img class="icon-img" src="facebook.svg" alt="Facebook">
+        <span class="icon-label">Facebook</span>
+      </a>
+      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
+        <img class="icon-img" src="instagram.svg" alt="Instagram">
+        <span class="icon-label">Instagram</span>
+      </a>
+      <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
+        <img class="icon-img" src="tiktok.svg" alt="TikTok">
+        <span class="icon-label">TikTok</span>
+      </a>
+      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
+        <img class="icon-img" src="logo.png" alt="Site">
+        <span class="icon-label">Site</span>
+      </a>
+      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
+        <img class="icon-img" src="email.svg" alt="E-mail">
+        <span class="icon-label">E-mail</span>
+      </a>
+    </div>
+    <footer>
+      &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
+    </footer>
+  </main>
+  <div class="carousel-wrapper">
+    <div class="carousel" id="carousel"></div>
+    <div class="carousel-dots" id="carousel-dots"></div>
   </div>
   <script>
     const images = [
