--- a/index2.html
+++ b/index2.html
@@ -163,8 +163,9 @@
     }
     .carousel-wrapper {
       width: 100vw;
-      max-width: 600px;
+      max-width: 650px;
       overflow: hidden;
+      margin: 0px auto 0 auto;
       border-radius: 12px;
       box-shadow: 0 2px 10px #0005;
       background: #fff;
