--- a/index2.html
+++ b/index2.html
@@ -22,18 +22,32 @@
       background: rgba(0,0,0,0.45);
       border-radius: 20px;
     }
-    .logo {
+    /* LOGO FADING MULTICOR */
+    .logo-fade {
+      position: relative;
+      width: 130px;
+      height: 130px;
+      margin: 0 auto 25px auto;
+      display: block;
+    }
+    .logo-fade .logo-img {
+      position: absolute;
+      left: 0; top: 0;
       width: 130px;
       height: 130px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 25px;
       border: 4px solid #fff;
       box-shadow: 0 2px 6px #0002;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
       background: #fff;
+      transition: opacity 0.7s;
+      opacity: 0;
+      z-index: 1;
+      display: block;
+    }
+    .logo-fade .logo-img.show {
+      opacity: 1;
+      z-index: 2;
     }
     h1, .redes-title, .destaque-label, .icon-label {
       color: #fff;
@@ -223,6 +237,7 @@
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
       .icon-img,
       .destaque-link .icon-img { width: 70px; height: 70px; }
+      .logo-fade, .logo-fade .logo-img { width: 90px; height: 90px;}
       .logo { width: 90px; height: 90px;}
       .destaque-label { font-size: 12px; }
     }
@@ -230,7 +245,13 @@
 </head>
 <body>
   <main class="container">
-    <img class="logo" src="logo.png" alt="Logo da empresa Grupo Corcelli">
+    <!-- Logo com fade multicolorido -->
+    <div class="logo-fade" id="logo-fade">
+      <img class="logo-img show" src="logo/logo1.png" alt="Logo Corcelli cor 1">
+      <img class="logo-img" src="logo/logo2.png" alt="Logo Corcelli cor 2">
+      <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
+      <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
+    </div>
     <h1>Grupo Corcelli</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
@@ -278,6 +299,18 @@
     <div class="carousel-dots" id="carousel-dots"></div>
   </div>
   <script>
+    // LOGO FADING EFFECT
+    (function() {
+      const logos = document.querySelectorAll('#logo-fade .logo-img');
+      let logoIdx = 0;
+      setInterval(() => {
+        logos[logoIdx].classList.remove('show');
+        logoIdx = (logoIdx + 1) % logos.length;
+        logos[logoIdx].classList.add('show');
+      }, 1800);
+    })();
+
+    // CAROUSEL
     const images = [
       "carrossel/img1.PNG",
       "carrossel/img2.PNG",
@@ -295,9 +328,10 @@
     const dotsContainer = document.getElementById('carousel-dots');
     let idx = 0, intervalId = null, isDragging = false, startX = 0, currentX = 0, lastDx = 0;
 
-    images.forEach(src => {
+    images.forEach((src, i) => {
       const img = document.createElement('img');
       img.src = src;
+      img.alt = `Imagem do carrossel ${i+1}`;
       carousel.appendChild(img);
     });
 
@@ -334,7 +368,7 @@
       updateDots();
       if (resetTimer) {
         clearInterval(intervalId);
-        intervalId = setInterval(nextSlide, 3000);
+        intervalId = setInterval(nextSlide, 2000);
       }
     }
     function nextSlide() { goToSlide(idx + 1); }
