--- a/index.html
+++ b/index.html
@@ -23,19 +23,35 @@
       border-radius: 10px;
       max-width: 400px;
       box-shadow: 0 2px 8px #0001;
+      background: rgba(255,255,255,0.92);
     }
     h1 { color: #333; margin-bottom: 30px; }
-    .logo {
+    /* LOGO FADING MULTICOR */
+    .logo-fade {
+      position: relative;
+      width: 130px;
+      height: 130px;
+      margin: 0 auto 25px auto;
+      display: block;
+    }
+    .logo-fade .logo-img {
+      position: absolute;
+      left: 0; top: 0;
       width: 130px;
       height: 130px;
       border-radius: 50%;
       object-fit: cover;
-      margin-bottom: 25px;
       border: 4px solid #eee;
       box-shadow: 0 2px 6px #0002;
+      background: #fff;
+      transition: opacity 0.7s;
+      opacity: 0;
+      z-index: 1;
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+    }
+    .logo-fade .logo-img.show {
+      opacity: 1;
+      z-index: 2;
     }
     a.link-btn {
       display: flex;
@@ -44,7 +60,7 @@
       gap: 14px;
       margin: 13px 0;
       padding: 1px 20px;
-      border-radius: 40px; /* Cantos bem arredondados */
+      border-radius: 40px;
       color: white;
       text-decoration: none;
       font-size: 17px;
@@ -54,7 +70,7 @@
       max-width: 250px;
       margin-left: auto;
       margin-right: auto;
-      background: rgba(0, 0, 0, 0.7); /* Fundo igual para todos os botões: preto com 60% de transparência */
+      background: rgba(0, 0, 0, 0.7);
     }
     .link-btn img {
       width: 28px;
@@ -68,15 +84,75 @@
       width: 48px !important;
       height: 48px !important;
     }
-    /* Classes de cor de botão removidas, pois todos usam o mesmo fundo agora */
     a.link-btn:hover { transform: translateY(-2px) scale(1.03); box-shadow: 0 5px 16px #0002; opacity: .92; }
     .footer { margin-top: 25px; font-size: 12px; color: #aaa; }
+    /* Carrossel */
+    .carousel-wrapper {
+      width: 100vw;
+      max-width: 400px;
+      overflow: hidden;
+      margin: 30px auto 0 auto;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px #0005;
+      background: #fff;
+      position: relative;
+    }
+    .carousel {
+      display: flex;
+      transition: transform 0.4s cubic-bezier(.4,1,.3,1);
+      will-change: transform;
+    }
+    .carousel img {
+      width: 100%;
+      max-width: none;
+      height: auto;
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+      flex-shrink: 0;
+      user-select: none;
+      pointer-events: none;
+      display: block;
+      background: #eee;
+    }
+    .carousel-dots {
+      position: absolute;
+      bottom: 8px;
+      left: 0; right: 0;
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+    }
+    .carousel-dot {
+      width: 10px; height: 10px;
+      border-radius: 50%;
+      background: #fff;
+      border: 1.5px solid #888;
+      opacity: 0.7;
+      transition: background 0.3s, opacity 0.3s;
+      cursor: pointer;
+    }
+    .carousel-dot.active {
+      background: #007aff;
+      opacity: 1;
+      border-color: #007aff;
+    }
+    @media (max-width: 600px) {
+      .logo-fade, .logo-fade .logo-img { width: 90px; height: 90px; }
+      .carousel-wrapper { max-width: 98vw; }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <img class="logo" src="logo.png" alt="Logo da empresa">
+    <!-- Logo com fade multicolorido -->
+    <div class="logo-fade" id="logo-fade">
+      <img class="logo-img show" src="logo1.png" alt="Logo Corcelli cor 1">
+      <img class="logo-img" src="logo2.png" alt="Logo Corcelli cor 2">
+      <img class="logo-img" src="logo3.png" alt="Logo Corcelli cor 3">
+      <img class="logo-img" src="logo4.png" alt="Logo Corcelli cor 4">
+    </div>
     <h1>Grupo Corcelli</h1>
+    <!-- Botões NÃO mexidos conforme solicitado -->
     <a class="link-btn salvar" href="contato.vcf" download>
       <img class="icon-whatsapp" src="contato.svg" alt="Salvar contato"> Salvar contato
     </a>
@@ -105,5 +181,142 @@
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
     </div>
   </div>
+  <!-- Carrossel abaixo dos botões -->
+  <div class="carousel-wrapper">
+    <div class="carousel" id="carousel"></div>
+    <div class="carousel-dots" id="carousel-dots"></div>
+  </div>
+  <script>
+    // LOGO FADING EFFECT
+    (function() {
+      const logos = document.querySelectorAll('#logo-fade .logo-img');
+      let logoIdx = 0;
+      setInterval(() => {
+        logos[logoIdx].classList.remove('show');
+        logoIdx = (logoIdx + 1) % logos.length;
+        logos[logoIdx].classList.add('show');
+      }, 1800);
+    })();
+
+    // CAROUSEL
+    const images = [
+      "carrossel/img1.PNG",
+      "carrossel/img2.PNG",
+      "carrossel/img3.PNG",
+      "carrossel/img4.PNG",
+      "carrossel/img5.PNG",
+      "carrossel/img6.PNG",
+      "carrossel/img7.PNG",
+      "carrossel/img8.PNG",
+      "carrossel/img9.PNG",
+      "carrossel/img10.PNG"
+    ];
+
+    const carousel = document.getElementById('carousel');
+    const dotsContainer = document.getElementById('carousel-dots');
+    let idx = 0, intervalId = null, isDragging = false, startX = 0, currentX = 0, lastDx = 0;
+
+    images.forEach((src, i) => {
+      const img = document.createElement('img');
+      img.src = src;
+      img.alt = `Imagem do carrossel ${i+1}`;
+      carousel.appendChild(img);
+    });
+
+    function getSlideWidth() {
+      return document.querySelector('.carousel-wrapper').offsetWidth;
+    }
+
+    function updateCarouselWidth() {
+      const slideWidth = getSlideWidth();
+      carousel.style.width = (slideWidth * images.length) + 'px';
+      Array.from(carousel.children).forEach(img => {
+        img.style.width = slideWidth + 'px';
+      });
+    }
+    updateCarouselWidth();
+
+    images.forEach((_, i) => {
+      const dot = document.createElement('span');
+      dot.className = 'carousel-dot' + (i === 0 ? ' active' : '');
+      dot.onclick = () => goToSlide(i, true);
+      dotsContainer.appendChild(dot);
+    });
+
+    function updateDots() {
+      document.querySelectorAll('.carousel-dot').forEach((dot, i) => {
+        dot.classList.toggle('active', i === idx);
+      });
+    }
+
+    function goToSlide(i, resetTimer) {
+      idx = (i + images.length) % images.length;
+      const slideWidth = getSlideWidth();
+      carousel.style.transform = `translateX(-${idx * slideWidth}px)`;
+      updateDots();
+      if (resetTimer) {
+        clearInterval(intervalId);
+        intervalId = setInterval(nextSlide, 2000);
+      }
+    }
+    function nextSlide() { goToSlide(idx + 1); }
+    intervalId = setInterval(nextSlide, 2000);
+
+    window.addEventListener('resize', () => {
+      updateCarouselWidth();
+      goToSlide(idx);
+    });
+
+    carousel.addEventListener('touchstart', e => {
+      isDragging = true;
+      startX = e.touches[0].clientX;
+      lastDx = 0;
+      carousel.style.transition = 'none';
+      clearInterval(intervalId);
+    });
+    carousel.addEventListener('touchmove', e => {
+      if (!isDragging) return;
+      currentX = e.touches[0].clientX;
+      const dx = currentX - startX;
+      lastDx = dx;
+      const slideWidth = getSlideWidth();
+      carousel.style.transform = `translateX(${-idx * slideWidth + dx}px)`;
+    });
+    carousel.addEventListener('touchend', e => {
+      if (!isDragging) return;
+      isDragging = false;
+      carousel.style.transition = '';
+      if (lastDx > 50) goToSlide(idx - 1, true);
+      else if (lastDx < -50) goToSlide(idx + 1, true);
+      else goToSlide(idx, true);
+      lastDx = 0;
+    });
+
+    let mouseDown = false;
+    carousel.addEventListener('mousedown', e => {
+      mouseDown = true; startX = e.clientX; lastDx = 0;
+      clearInterval(intervalId); carousel.style.transition = 'none';
+    });
+    carousel.addEventListener('mousemove', e => {
+      if (!mouseDown) return;
+      currentX = e.clientX;
+      const dx = currentX - startX;
+      lastDx = dx;
+      const slideWidth = getSlideWidth();
+      carousel.style.transform = `translateX(${-idx * slideWidth + dx}px)`;
+    });
+    carousel.addEventListener('mouseup', e => {
+      if (!mouseDown) return;
+      mouseDown = false;
+      carousel.style.transition = '';
+      if (lastDx > 50) goToSlide(idx - 1, true);
+      else if (lastDx < -50) goToSlide(idx + 1, true);
+      else goToSlide(idx, true);
+      lastDx = 0;
+    });
+    carousel.addEventListener('mouseleave', e => { if (mouseDown) { mouseDown = false; goToSlide(idx, true); } });
+
+    window.addEventListener('DOMContentLoaded', () => goToSlide(0));
+  </script>
 </body>
 </html>
