--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      /*background: #f0f0f0;*/
       text-align: center;
       min-height: 100vh;
     }
