--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
   <title>Links do Grupo Corcelli</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      /*background: #f0f0f0;*/
-      text-align: center;
+      margin: 0;
+      padding: 0;
       min-height: 100vh;
-    }
-    @media (max-width: 600px) {
-      body {
-        background: url('fundoapp1.jpg') no-repeat center center;
-        background-size: cover;
-      }
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: url('fundoapp1.jpg') no-repeat center center fixed;
+      background-size: cover;
     }
     .container {
       margin: 20px auto;
