--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
   <div class="container">
     <!-- Logo com fade multicolorido -->
     <div class="logo-fade" id="logo-fade">
-      <img class="logo-img show" src="/logo/logo1.png" alt="Logo Corcelli cor 1">
-      <img class="logo-img" src="/logo/logo2.png" alt="Logo Corcelli cor 2">
-      <img class="logo-img" src="/logo/logo3.png" alt="Logo Corcelli cor 3">
-      <img class="logo-img" src="/logo/logo4.png" alt="Logo Corcelli cor 4">
+      <img class="logo-img show" src="logo/logo1.png" alt="Logo Corcelli cor 1">
+      <img class="logo-img" src="logo/logo2.png" alt="Logo Corcelli cor 2">
+      <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
+      <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
     </div>
     <h1>Grupo Corcelli</h1>
     <a class="link-btn salvar" href="contato.vcf" download>
