--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       background-size: cover;
     }
     .container {
-      margin: 20px auto;
+      margin: 0 auto;
       padding: 40px 20px;
-      border-radius: 10px;
-      max-width: 400px;
-      box-shadow: 0 2px 8px #0001;
-      background: rgba(255,255,255,0.92);
+      max-width: 600px;
+      background: rgba(0,0,0,0.45);
+      border-radius: 20px;
     }
     /* LOGO FADING MULTICOR */
     .logo-fade {
