--- a/index2.html
+++ b/index2.html
@@ -289,6 +289,10 @@
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </a>
+      <a class="icon-link" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
+        <img class="icon-img" src="address.svg" alt="Endereço">
+        <span class="icon-label">Endereço</span>
+      </a>
     </div>
     <footer>
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
