--- a/index2.html
+++ b/index2.html
@@ -263,6 +263,12 @@
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
+
+    </a>
+      <a class="destaque-link End" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
+        <img class="icon-img" src="address.svg" alt="Endereço">
+        <span class="destaque-label">Endereço</span>
+      </a>
     </div>
     <div class="icon-grid">
       <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
@@ -288,12 +294,7 @@
       <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
-      </a>
-      <a class="icon-link" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
-        <img class="icon-img" src="address.svg" alt="Endereço">
-        <span class="icon-label">Endereço</span>
-      </a>
-    </div>
+      </div>
     <footer>
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
     </footer>
