--- a/index2.html
+++ b/index2.html
@@ -95,10 +95,6 @@
       transition: box-shadow 0.2s;
       display: block;
     }
-    .destaque-link.salvar .icon-img {
-      background: #4CAF50;
-      border: 2px solid #388E3C;
-    }
     .destaque-link.phone .icon-img {
       background: #1877F3;
       border: 2px solid #1257A3;
@@ -255,7 +251,7 @@
     <h1>Grupo Corcelli</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
-      <a class="destaque-link salvar" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+      <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
@@ -263,7 +259,7 @@
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
-      <a class="destaque-link salvar" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
+      <a class="destaque-link phone" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
         <img class="icon-img" src="address.svg" alt="Endereço">
         <span class="destaque-label">Endereço</span>
       </a>
