--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -23,7 +22,6 @@
       background: rgba(0,0,0,0.45);
       border-radius: 20px;
     }
-    /* LOGO FADING MULTICOR */
     .logo-fade {
       position: relative;
       width: 130px;
@@ -44,7 +42,6 @@
       transition: opacity 0.7s;
       opacity: 0;
       z-index: 1;
-      display: block;
     }
     .logo-fade .logo-img.show {
       opacity: 1;
@@ -72,9 +69,6 @@
       align-items: center;
       text-decoration: none;
       color: #fff;
-      background: none;
-      box-shadow: none;
-      outline: none;
       cursor: pointer;
     }
     .destaque-link:active,
@@ -94,7 +88,6 @@
       padding: 4px;
       border: 2px solid #eee;
       transition: box-shadow 0.2s;
-      display: block;
     }
     .destaque-link.phone .icon-img {
       background: #1877F3;
@@ -121,11 +114,7 @@
       align-items: center;
       text-decoration: none;
       color: #fff;
-      font-size: 16px;
       font-weight: 500;
-      background: none;
-      box-shadow: none;
-      outline: none;
       cursor: pointer;
     }
     .icon-link:active,
@@ -145,7 +134,6 @@
       padding: 4px;
       border: 2px solid #eee;
       transition: box-shadow 0.2s;
-      display: block;
     }
     .icon-label {
       opacity: 0;
@@ -228,14 +216,11 @@
         box-shadow: none !important;
         background: rgba(0,0,0,0.5);
       }
-    }
-    @media (max-width: 500px) {
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
       .icon-img,
       .destaque-link .icon-img { width: 70px; height: 70px; }
       .logo-fade, .logo-fade .logo-img { width: 90px; height: 90px;}
-      .logo { width: 90px; height: 90px;}
       .destaque-label { font-size: 12px; }
     }
   </style>
@@ -264,6 +249,8 @@
         <img class="icon-img" src="address.svg" alt="Endereço">
         <span class="destaque-label">Endereço</span>
       </a>
+    </div>
+    <div class="icon-grid">
       <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
@@ -287,7 +274,8 @@
       <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
-      </div>
+      </a>
+    </div>
     <footer>
       &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
     </footer>
@@ -307,7 +295,6 @@
         logos[logoIdx].classList.add('show');
       }, 1800);
     })();
-
     // CAROUSEL
     const images = [
       "carrossel/img1.PNG",
@@ -321,22 +308,18 @@
       "carrossel/img9.PNG",
       "carrossel/img10.PNG"
     ];
-
     const carousel = document.getElementById('carousel');
     const dotsContainer = document.getElementById('carousel-dots');
     let idx = 0, intervalId = null, isDragging = false, startX = 0, currentX = 0, lastDx = 0;
-
     images.forEach((src, i) => {
       const img = document.createElement('img');
       img.src = src;
       img.alt = `Imagem do carrossel ${i+1}`;
       carousel.appendChild(img);
     });
-
     function getSlideWidth() {
       return document.querySelector('.carousel-wrapper').offsetWidth;
     }
-
     function updateCarouselWidth() {
       const slideWidth = getSlideWidth();
       carousel.style.width = (slideWidth * images.length) + 'px';
@@ -345,20 +328,17 @@
       });
     }
     updateCarouselWidth();
-
     images.forEach((_, i) => {
       const dot = document.createElement('span');
       dot.className = 'carousel-dot' + (i === 0 ? ' active' : '');
       dot.onclick = () => goToSlide(i, true);
       dotsContainer.appendChild(dot);
     });
-
     function updateDots() {
       document.querySelectorAll('.carousel-dot').forEach((dot, i) => {
         dot.classList.toggle('active', i === idx);
       });
     }
-
     function goToSlide(i, resetTimer) {
       idx = (i + images.length) % images.length;
       const slideWidth = getSlideWidth();
@@ -371,12 +351,10 @@
     }
     function nextSlide() { goToSlide(idx + 1); }
     intervalId = setInterval(nextSlide, 2000);
-
     window.addEventListener('resize', () => {
       updateCarouselWidth();
       goToSlide(idx);
     });
-
     carousel.addEventListener('touchstart', e => {
       isDragging = true;
       startX = e.touches[0].clientX;
@@ -401,7 +379,6 @@
       else goToSlide(idx, true);
       lastDx = 0;
     });
-
     let mouseDown = false;
     carousel.addEventListener('mousedown', e => {
       mouseDown = true; startX = e.clientX; lastDx = 0;
@@ -425,7 +402,6 @@
       lastDx = 0;
     });
     carousel.addEventListener('mouseleave', e => { if (mouseDown) { mouseDown = false; goToSlide(idx, true); } });
-
     window.addEventListener('DOMContentLoaded', () => goToSlide(0));
   </script>
 </body>
