--- a/index1.html
+++ b/index1.html
@@ -227,7 +227,7 @@
       <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
       <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
     </div>
-    <h1>Grupo Corcelli</h1>
+    <h1>Grupo Corcelli Loja01</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
       <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
@@ -244,7 +244,7 @@
       </a>
     </div>
     <div class="icon-grid">
-      <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
+      <a class="icon-link" href="https://api.whatsapp.com/send?phone=5511915417060&text=Ol%C3%A1,%20Grupo%20Corcelli!%20Gostaria%20de%20saber%20mais%20sobre%20os%20produtos%20e%20servi%C3%A7os%20dispon%C3%ADveis" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
