--- a/index1.html
+++ b/index1.html
@@ -234,12 +234,12 @@
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
-      <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar para Grupo Corcelli">
+      <a class="destaque-link phone" href="tel:114524-1485" aria-label="Ligar para Grupo Corcelli">
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
-      <a class="destaque-link phone" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
-        <img class="icon-img" src="address.svg" alt="Endereço">
+      <a class="destaque-link phone" href="https://maps.app.goo.gl/MF9RV9H7D4gPbi7DA" aria-label="Endereço Matriz Grupo Corcelli">
+        <img class="icon-img" src="address.svg" alt="Endereço">   
         <span class="destaque-label">Endereço</span>
       </a>
     </div>
@@ -256,7 +256,7 @@
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
-      <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
+      <a class="icon-link" href="https://www.tiktok.com/@grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
         <img class="icon-img" src="tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
