--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links do Grupo Corcelli</title>
+  <title>Links do Grupo Corcelli loja 01</title>
   <style>
     body {
       margin: 0;
