--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links do Grupo Corcelli</title>
+  <title>Links da LIVE! Itatiba</title>
   <style>
     body {
       margin: 0;
@@ -12,7 +12,7 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      background: url('fundoapp1.jpg') no-repeat center center fixed;
+      background: url('fundoapp2.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     .container {
@@ -243,54 +243,54 @@
   <main class="container">
     <!-- Logo com fade multicolorido -->
     <div class="logo-fade" id="logo-fade">
-      <img class="logo-img show" src="logo/logo1.png" alt="Logo Corcelli cor 1">
-      <img class="logo-img" src="logo/logo2.png" alt="Logo Corcelli cor 2">
-      <img class="logo-img" src="logo/logo3.png" alt="Logo Corcelli cor 3">
-      <img class="logo-img" src="logo/logo4.png" alt="Logo Corcelli cor 4">
+      <img class="logo-img show" src="logo2/logo1.png" alt="Logo LIVE! cor 1">
+      <img class="logo-img" src="logo2/logo2.png" alt="Logo LIVE! cor 2">
+      <img class="logo-img" src="logo2/logo3.png" alt="Logo LIVE! cor 3">
+      <img class="logo-img" src="logo2/logo4.png" alt="Logo LIVE! cor 4">
     </div>
-    <h1>Grupo Corcelli</h1>
+    <h1>LIVE! ITATIBA</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
-      <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato do Grupo Corcelli">
+      <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
-      <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar para Grupo Corcelli">
+      <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar Live!">
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
-      <a class="destaque-link phone" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Matriz Grupo Corcelli">
+      <a class="destaque-link phone" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Loja">
         <img class="icon-img" src="address.svg" alt="Endereço">
         <span class="destaque-label">Endereço</span>
       </a>
     </div>
     <div class="icon-grid">
-      <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Grupo Corcelli">
+      <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
-      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook Grupo Corcelli">
+      <a class="icon-link" href="https://facebook.com/grupo.corcelli" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
-      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram Grupo Corcelli">
+      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
-      <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok Grupo Corcelli">
+      <a class="icon-link" href="https://www.tiktok.com/grupocorcelli" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
         <img class="icon-img" src="tiktok.svg" alt="TikTok">
         <span class="icon-label">TikTok</span>
       </a>
-      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Grupo Corcelli">
+      <a class="icon-link" href="http://www.grupocorcelli.com/" target="_blank" rel="noopener noreferrer" aria-label="Site Live!">
         <img class="icon-img" src="logo.png" alt="Site">
         <span class="icon-label">Site</span>
       </a>
-      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail Grupo Corcelli">
+      <a class="icon-link" href="mailto:botcorcelli@gmail.com" aria-label="E-mail">
         <img class="icon-img" src="email.svg" alt="E-mail">
         <span class="icon-label">E-mail</span>
       </div>
     <footer>
-      &copy; 2025 Grupo Corcelli. Todos os direitos reservados.
+      &copy; 2025 Live! Itatiba. Todos os direitos reservados.
     </footer>
   </main>
   <div class="carousel-wrapper">
@@ -311,16 +311,17 @@
 
     // CAROUSEL
     const images = [
-      "carrossel/img1.PNG",
-      "carrossel/img2.PNG",
-      "carrossel/img3.PNG",
-      "carrossel/img4.PNG",
-      "carrossel/img5.PNG",
-      "carrossel/img6.PNG",
-      "carrossel/img7.PNG",
-      "carrossel/img8.PNG",
-      "carrossel/img9.PNG",
-      "carrossel/img10.PNG"
+      "carrossel2/img1.PNG",
+      "carrossel2/img2.PNG",
+      "carrossel2/img3.PNG",
+      "carrossel2/img4.PNG",
+      "carrossel2/img5.PNG",
+      "carrossel2/img6.PNG",
+      "carrossel2/img7.PNG",
+      "carrossel2/img8.PNG",
+      "carrossel2/img9.PNG",
+      "carrossel2/img10.PNG",
+      "carrossel2/img11.PNG"
     ];
 
     const carousel = document.getElementById('carousel');
