--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      background: url('fundoapp2.jpg') no-repeat center center fixed;
+      background: url('fundoapp2.jpeg') no-repeat center center fixed;
       background-size: cover;
     }
     .container {
@@ -311,17 +311,17 @@
 
     // CAROUSEL
     const images = [
-      "carrossel2/img1.PNG",
-      "carrossel2/img2.PNG",
-      "carrossel2/img3.PNG",
-      "carrossel2/img4.PNG",
-      "carrossel2/img5.PNG",
-      "carrossel2/img6.PNG",
-      "carrossel2/img7.PNG",
-      "carrossel2/img8.PNG",
-      "carrossel2/img9.PNG",
-      "carrossel2/img10.PNG",
-      "carrossel2/img11.PNG"
+      "carrossel2/img1.jpg",
+      "carrossel2/img2.jpg",
+      "carrossel2/img3.jpg",
+      "carrossel2/img4.jpg",
+      "carrossel2/img5.jpg",
+      "carrossel2/img6.jpg",
+      "carrossel2/img7.jpg",
+      "carrossel2/img8.jpg",
+      "carrossel2/img9.jpg",
+      "carrossel2/img10.jpg",
+      "carrossel2/img11.jpg"
     ];
 
     const carousel = document.getElementById('carousel');
