--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      background: url('fundoapp2.jpeg') no-repeat center center fixed;
+      background: url('fundoapp2.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     .container {
