--- a/index2.html
+++ b/index2.html
@@ -21,6 +21,7 @@
       max-width: 500px;
       background: rgba(0,0,0,0.45);
       border-radius: 20px;
+      box-shadow: 0 2px 10px #0005;
     }
     .logo-fade {
       position: relative;
@@ -206,9 +207,9 @@
       .container, .carousel-wrapper {
         max-width: 100vw;
         border-radius: 0 !important;
-        box-shadow: none !important;
+        /* box-shadow: none !important;  <-- REMOVIDO para manter a sombra */
         background: rgba(0,0,0,0.5);
-    }
+      }
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
       .icon-img,
