--- a/index2.html
+++ b/index2.html
@@ -21,6 +21,7 @@
       max-width: 500px;
       border-radius: 20px;
       box-shadow: 0 2px 10px #0005;
+      background: rgba(0,0,0,0.45);
     }
     .logo-fade {
       position: relative;
@@ -37,8 +38,8 @@
       border-radius: 50%;
       object-fit: cover;
       border: 4px solid #fff;
-      box-shadow: 0 2px 6px #0002;
-      background: #fff;
+      box-shadow: 0 2px 16px #0006;
+      background: #fff !important;
       transition: opacity 0.7s;
       opacity: 0;
       z-index: 1;
@@ -83,14 +84,14 @@
       border-radius: 40%;
       object-fit: contain;
       margin-bottom: 6px;
-      background: #fff;
-      box-shadow: 0 2px 10px #0002;
+      background: #fff !important;
+      box-shadow: 0 2px 16px #0004;
       padding: 4px;
       border: 2px solid #eee;
       transition: box-shadow 0.2s;
     }
     .destaque-link.phone .icon-img {
-      background: #1877F3;
+      background: #1877F3 !important;
       border: 2px solid #1257A3;
     }
     .destaque-label {
@@ -99,6 +100,10 @@
       margin-top: 2px;
       transition: opacity 0.18s;
       letter-spacing: 0.01em;
+      background: rgba(0,0,0,0.22);
+      border-radius: 8px;
+      padding: 2px 10px;
+      display: inline-block;
     }
     .icon-grid {
       display: grid;
@@ -128,8 +133,8 @@
       height: 80px;
       border-radius: 50%;
       object-fit: contain;
-      background: #fff;
-      box-shadow: 0 2px 6px #0001;
+      background: #fff !important;
+      box-shadow: 0 2px 12px #0004;
       margin-bottom: 4px;
       padding: 4px;
       border: 2px solid #eee;
@@ -146,6 +151,10 @@
       letter-spacing: 0.01em;
       color: #fff;
       text-shadow: 0 1px 4px #0009;
+      background: rgba(0,0,0,0.22);
+      border-radius: 8px;
+      padding: 2px 10px;
+      display: inline-block;
     }
     footer {
       margin-top: 25px;
@@ -206,8 +215,7 @@
       .container, .carousel-wrapper {
         max-width: 100vw;
         border-radius: 0 !important;
-        /* box-shadow: none !important;  <-- REMOVIDO para manter a sombra */
-        background: rgba(0,0,0,0.5);
+        background: rgba(0,0,0,0.18);
       }
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
