--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,8 @@
       padding: 40px 20px;
       max-width: 500px;
       border-radius: 20px;
-      box-shadow: 0 2px 10px #0005;
-      background: rgba(0,0,0,0.45);
+      background: rgba(0,0,0,0.10);  /* mais transparente para dar foco ao fundo */
+      box-shadow: none;              /* sem sombra, foco nos botões */
     }
     .logo-fade {
       position: relative;
@@ -35,12 +35,12 @@
       left: 0; top: 0;
       width: 130px;
       height: 130px;
-      border-radius: 50%;
+      border-radius: 50% !important;
       object-fit: cover;
       border: 4px solid #fff;
-      box-shadow: 0 2px 16px #0006;
       background: #fff !important;
-      transition: opacity 0.7s;
+      box-shadow: 0 10px 28px 0 rgba(0,0,0,0.15), 0 2px 4px 0 rgba(0,0,0,0.12);
+      transition: opacity 0.7s, box-shadow 0.3s, transform 0.3s;
       opacity: 0;
       z-index: 1;
     }
@@ -72,23 +72,17 @@
       color: #fff;
       cursor: pointer;
     }
-    .destaque-link:active,
-    .destaque-link:focus,
-    .destaque-link:hover {
-      opacity: 0.9;
-      transform: translateY(-1px) scale(1.04);
-    }
     .destaque-link .icon-img {
       width: 70px;
       height: 70px;
-      border-radius: 40%;
+      border-radius: 20px !important;
       object-fit: contain;
       margin-bottom: 6px;
       background: #fff !important;
-      box-shadow: 0 2px 16px #0004;
+      box-shadow: 0 10px 28px 0 rgba(0,0,0,0.15), 0 2px 4px 0 rgba(0,0,0,0.12);
       padding: 4px;
-      border: 2px solid #eee;
-      transition: box-shadow 0.2s;
+      border: 2px solid #eef;
+      transition: box-shadow 0.3s, transform 0.3s;
     }
     .destaque-link.phone .icon-img {
       background: #1877F3 !important;
@@ -100,10 +94,9 @@
       margin-top: 2px;
       transition: opacity 0.18s;
       letter-spacing: 0.01em;
-      background: rgba(0,0,0,0.22);
-      border-radius: 8px;
-      padding: 2px 10px;
-      display: inline-block;
+      background: none;
+      box-shadow: none;
+      padding: 0;
     }
     .icon-grid {
       display: grid;
@@ -122,23 +115,27 @@
       font-weight: 500;
       cursor: pointer;
     }
-    .icon-link:active,
-    .icon-link:focus,
-    .icon-link:hover {
-      opacity: 0.9;
-      transform: translateY(-2px) scale(1.03);
-    }
     .icon-img {
       width: 80px;
       height: 80px;
-      border-radius: 50%;
+      border-radius: 50% !important;
       object-fit: contain;
       background: #fff !important;
-      box-shadow: 0 2px 12px #0004;
+      box-shadow: 0 10px 28px 0 rgba(0,0,0,0.15), 0 2px 4px 0 rgba(0,0,0,0.12);
       margin-bottom: 4px;
       padding: 4px;
-      border: 2px solid #eee;
-      transition: box-shadow 0.2s;
+      border: 2px solid #eef;
+      transition: box-shadow 0.3s, transform 0.3s;
+    }
+    .icon-link:active .icon-img,
+    .icon-link:focus .icon-img,
+    .icon-link:hover .icon-img,
+    .destaque-link:active .icon-img,
+    .destaque-link:focus .icon-img,
+    .destaque-link:hover .icon-img,
+    .logo-fade .logo-img.show:hover {
+      box-shadow: 0 16px 32px 0 rgba(0,0,0,0.18), 0 2px 4px 0 rgba(0,0,0,0.15);
+      transform: translateY(-4px) scale(1.06);
     }
     .icon-label {
       opacity: 1;
@@ -151,10 +148,9 @@
       letter-spacing: 0.01em;
       color: #fff;
       text-shadow: 0 1px 4px #0009;
-      background: rgba(0,0,0,0.22);
-      border-radius: 8px;
-      padding: 2px 10px;
-      display: inline-block;
+      background: none;
+      box-shadow: none;
+      padding: 0;
     }
     footer {
       margin-top: 25px;
@@ -172,50 +168,11 @@
       background: #fff;
       position: relative;
     }
-    .carousel {
-      display: flex;
-      transition: transform 0.4s cubic-bezier(.4,1,.3,1);
-      will-change: transform;
-    }
-    .carousel img {
-      width: 100%;
-      max-width: none;
-      height: auto;
-      aspect-ratio: 1 / 1;
-      object-fit: cover;
-      flex-shrink: 0;
-      user-select: none;
-      pointer-events: none;
-      display: block;
-      background: #eee;
-    }
-    .carousel-dots {
-      position: absolute;
-      bottom: 8px;
-      left: 0; right: 0;
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-    }
-    .carousel-dot {
-      width: 10px; height: 10px;
-      border-radius: 50%;
-      background: #fff;
-      border: 1.5px solid #888;
-      opacity: 0.7;
-      transition: background 0.3s, opacity 0.3s;
-      cursor: pointer;
-    }
-    .carousel-dot.active {
-      background: #007aff;
-      opacity: 1;
-      border-color: #007aff;
-    }
     @media (max-width: 500px) {
       .container, .carousel-wrapper {
         max-width: 100vw;
         border-radius: 0 !important;
-        background: rgba(0,0,0,0.18);
+        background: rgba(0,0,0,0.08);
       }
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
@@ -228,7 +185,6 @@
 </head>
 <body>
   <main class="container">
-    <!-- Logo com fade multicolorido -->
     <div class="logo-fade" id="logo-fade">
       <img class="logo-img show" src="logo2/logo1.png" alt="Logo LIVE! cor 1">
       <img class="logo-img" src="logo2/logo2.png" alt="Logo LIVE! cor 2">
