--- a/index2.html
+++ b/index2.html
@@ -17,11 +17,10 @@
     }
     .container {
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
       max-width: 500px;
       border-radius: 20px;
       box-shadow: 0 2px 10px #0005;
-      background: rgba(0,0,0,0.45);
     }
     .logo-fade {
       position: relative;
@@ -39,8 +38,7 @@
       object-fit: cover;
       border: 4px solid #fff;
       box-shadow: 0 2px 6px #0002;
-      background: #fff !important;
-      /* Se quiser vidro: backdrop-filter: blur(2px); */
+      background: #fff;
       transition: opacity 0.7s;
       opacity: 0;
       z-index: 1;
@@ -85,15 +83,14 @@
       border-radius: 40%;
       object-fit: contain;
       margin-bottom: 6px;
-      background: #fff !important;
-      /* Se quiser vidro: backdrop-filter: blur(2px); */
+      background: #fff;
       box-shadow: 0 2px 10px #0002;
       padding: 4px;
       border: 2px solid #eee;
       transition: box-shadow 0.2s;
     }
     .destaque-link.phone .icon-img {
-      background: #1877F3 !important;
+      background: #1877F3;
       border: 2px solid #1257A3;
     }
     .destaque-label {
@@ -102,9 +99,6 @@
       margin-top: 2px;
       transition: opacity 0.18s;
       letter-spacing: 0.01em;
-      background: rgba(0,0,0,0.25);
-      border-radius: 8px;
-      padding: 2px 8px;
     }
     .icon-grid {
       display: grid;
@@ -134,8 +128,7 @@
       height: 80px;
       border-radius: 50%;
       object-fit: contain;
-      background: #fff !important;
-      /* Se quiser vidro: backdrop-filter: blur(2px); */
+      background: #fff;
       box-shadow: 0 2px 6px #0001;
       margin-bottom: 4px;
       padding: 4px;
@@ -153,9 +146,6 @@
       letter-spacing: 0.01em;
       color: #fff;
       text-shadow: 0 1px 4px #0009;
-      background: rgba(0,0,0,0.25);
-      border-radius: 8px;
-      padding: 2px 8px;
     }
     footer {
       margin-top: 25px;
@@ -216,7 +206,8 @@
       .container, .carousel-wrapper {
         max-width: 100vw;
         border-radius: 0 !important;
-        background: rgba(0,0,0,0.25);
+        /* box-shadow: none !important;  <-- REMOVIDO para manter a sombra */
+        background: rgba(0,0,0,0.5);
       }
       .container { max-width: 98vw; padding: 10vw 1vw; }
       .icon-grid { grid-template-columns: repeat(3, 1fr); gap: 18px 8px; }
