--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links da LIVE! Itatiba</title>
+  <title>Links da STUDIOLIVE! Itatiba</title>
   <style>
     body {
       margin: 0;
@@ -227,24 +227,24 @@
       <img class="logo-img" src="logo2/logo3.png" alt="Logo LIVE! cor 3">
       <img class="logo-img" src="logo2/logo4.png" alt="Logo LIVE! cor 4">
     </div>
-    <h1>LIVE! ITATIBA</h1>
+    <h1>Studio Live! Itatiba</h1>
     <div class="redes-title">Acesse nossas redes sociais</div>
     <div class="destaque-row">
       <a class="destaque-link phone" href="contato.vcf" download aria-label="Salvar contato">
         <img class="icon-img" src="contato.svg" alt="Salvar contato">
         <span class="destaque-label">Salvar contato</span>
       </a>
-      <a class="destaque-link phone" href="tel:11915417060" aria-label="Ligar Live!">
+      <a class="destaque-link phone" href="tel:11913229308" aria-label="Ligar Live!">
         <img class="icon-img" src="call.svg" alt="Telefone">
         <span class="destaque-label">Ligar</span>
       </a>
-      <a class="destaque-link phone" href="https://maps.app.goo.gl/awiQ7khHEFbZFVzb9" aria-label="Endereço Loja">
+      <a class="destaque-link phone" href="https://maps.app.goo.gl/nD4ycMeUo2ZZ8UX58" aria-label="Endereço Loja">
         <img class="icon-img" src="address.svg" alt="Endereço">
         <span class="destaque-label">Endereço</span>
       </a>
     </div>
     <div class="icon-grid">
-      <a class="icon-link" href="https://wa.me/5511915417060" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+      <a class="icon-link" href="https://wa.me/5511913229308" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
         <img class="icon-img" src="whatsapp.svg" alt="WhatsApp">
         <span class="icon-label">WhatsApp</span>
       </a>
@@ -252,7 +252,7 @@
         <img class="icon-img" src="facebook.svg" alt="Facebook">
         <span class="icon-label">Facebook</span>
       </a>
-      <a class="icon-link" href="https://instagram.com/Grupo_Corcelli" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+      <a class="icon-link" href="https://instagram.com/liveitatiba" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
         <img class="icon-img" src="instagram.svg" alt="Instagram">
         <span class="icon-label">Instagram</span>
       </a>
