--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
       text-align: center;
       background: url('fundoapp2.avif') no-repeat center center fixed;
       background-size: cover;
+      max-width: 600px;
     }
     .container {
       margin: 0 auto;
